# bristolbusbot

./: .gitignore  ATTRIBUTION.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
collector/: README.md  pyproject.toml
collector/src/collector/: __init__.py  audit_db.py  config.py  delay.py  geo.py  live_db.py  matching.py  run.py  secret_filter.py  siri.py  sirisx.py  timeparse.py
collector/tests/: fixture_gtfs.py  test_delay.py  test_live_db.py  test_matching.py  test_run.py  test_secret_filter.py  test_siri.py  test_sirisx.py  test_timeparse.py
site/: .env.example  README.md  bus-descriptions.json  depot-descriptions.json  package.json  pyproject.toml  requirements.txt  stop_enrichment.json  stop_localities.json  waiting-descriptions.json  weca_boundary.geojson  wsgi.py
site/app/: __init__.py  config.py  db.py
site/app/routes/: __init__.py  api_buses.py  api_departures.py  api_journeys.py  api_misc.py  api_stops.py  health.py  pages.py
site/app/services/: audit_integration.py  buses.py  departures.py  depots.py  fleet.py  journeys.py  localities.py  stop_names.py  stops.py
site/static/: manifest.webmanifest
site/static/css/: base.css  board.css  chrome.css  fonts.css  map.css  mobile.css  profile.css  tokens.css  utilities.css  vehicle_card.css  vehicle_sidebar.css
site/static/js/: app.js  (+10 more)
site/templates/: base.html  index.html  vehicle_profile.html
site/tests/: conftest.py  test_api_buses.py  test_api_departures.py  test_api_journeys.py  test_api_misc.py  test_api_stops.py  test_audit_integration.py  test_safe_rendering.py  test_security.py
(+184 files in other folders)
