[project]
name = "bbb-collector"
version = "0.1.0"
description = "Shared BODS collector: one poller, one matcher, one delay number"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "xmltodict>=0.13",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
    "shapely>=2.0",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
